--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,8 @@
             margin-bottom: 30px;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/211120/orbitControls.js"></script>
 </head>
 <body>
 <div class="flex-center position-ref full-height">
@@ -75,5 +77,59 @@
         </div>
     </div>
 </div>
+<script>
+    var width = window.innerWidth;
+    var height = window.innerHeight;
+
+    var renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(width, height);
+    document.body.appendChild(renderer.domElement);
+
+    var video      = document.createElement('video');
+    video.autoplay = true;
+    video.src    = '/api/videos';
+    video.crossOrigin = '';
+    videoTexture = new THREE.Texture(video);
+    videoTexture.minFilter = THREE.LinearFilter;
+    videoTexture.magFilter = THREE.LinearFilter;
+    videoTexture.format = THREE.RGBFormat;
+
+
+    var scene = new THREE.Scene();
+
+    var cubeGeometry = new THREE.SphereGeometry(500, 60, 40);
+    var sphereMat = new THREE.MeshBasicMaterial({map: videoTexture});
+    sphereMat.side = THREE.BackSide;
+    var cube = new THREE.Mesh(cubeGeometry, sphereMat);
+    scene.add(cube);
+
+
+
+    var camera = new THREE.PerspectiveCamera(45, width / height, 0.1, 10000);
+    camera.position.y = 0;
+    camera.position.z = 500;
+
+    scene.add(camera);
+
+    var controls = new THREE.OrbitControls( camera);
+
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.25;
+    controls.enableZoom = false;
+    controls.maxDistance = 500;
+    controls.minDistance = 500;
+
+    function render() {
+        if( video.readyState === video.HAVE_ENOUGH_DATA ){
+            videoTexture.needsUpdate = true;
+        }
+        controls.update();
+        renderer.render(scene, camera);
+        requestAnimationFrame(render);
+    }
+
+    render();
+
+</script>
 </body>
 </html>
