--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,28 @@
             margin-bottom: 30px;
         }
     </style>
+    <link href="http://vjs.zencdn.net/5.8/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/5.8/video.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/211120/orbitControls.js"></script>
+    <!--<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/211120/orbitControls.js"></script>-->
+    <script src="https://rawgit.com/yanwsh/videojs-panorama/master/dist/videojs-panorama.v5.js"></script>
+    <style>
+        player-wrapper {
+            width: 100%;
+            max-width: 900px;
+            position: relative;
+        }
+        #player-container {
+            padding-top: 56.25%;
+        }
+        #player {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
 <div class="flex-center position-ref full-height">
@@ -75,61 +95,82 @@
         <div class="links">
             <a href="https://github.com/salamaashoush/you360">GitHub</a>
         </div>
+
+
+    </div>
+    <div id="player-container">
+        <video id="player" class="video-js vjs-default-skin vjs-big-play-centered"
+               crossorigin=''
+               preload="metadata"
+               controls>
+            <source src="/api/videos/stream" type='video/mp4'>
+        </video>
     </div>
 </div>
 <script>
-    var width = window.innerWidth;
-    var height = window.innerHeight;
-
-    var renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(width, height);
-    document.body.appendChild(renderer.domElement);
-
-    var video      = document.createElement('video');
-    video.autoplay = true;
-    video.src    = '/api/videos';
-    video.crossOrigin = '';
-    videoTexture = new THREE.Texture(video);
-    videoTexture.minFilter = THREE.LinearFilter;
-    videoTexture.magFilter = THREE.LinearFilter;
-    videoTexture.format = THREE.RGBFormat;
-
-
-    var scene = new THREE.Scene();
-
-    var cubeGeometry = new THREE.SphereGeometry(500, 60, 40);
-    var sphereMat = new THREE.MeshBasicMaterial({map: videoTexture});
-    sphereMat.side = THREE.BackSide;
-    var cube = new THREE.Mesh(cubeGeometry, sphereMat);
-    scene.add(cube);
-
-
-
-    var camera = new THREE.PerspectiveCamera(45, width / height, 0.1, 10000);
-    camera.position.y = 0;
-    camera.position.z = 500;
-
-    scene.add(camera);
-
-    var controls = new THREE.OrbitControls( camera);
-
-    controls.enableDamping = true;
-    controls.dampingFactor = 0.25;
-    controls.enableZoom = false;
-    controls.maxDistance = 500;
-    controls.minDistance = 500;
-
-    function render() {
-        if( video.readyState === video.HAVE_ENOUGH_DATA ){
-            videoTexture.needsUpdate = true;
+//    var width = window.innerWidth;
+//    var height = window.innerHeight;
+//
+//    var renderer = new THREE.WebGLRenderer({ antialias: true });
+//    renderer.setSize(width, height);
+//    document.body.appendChild(renderer.domElement);
+//
+//    var video      = document.createElement('video');
+//    video.autoplay = true;
+//    video.src    = '/api/videos';
+//    video.crossOrigin = '';
+//    videoTexture = new THREE.Texture(video);
+//    videoTexture.minFilter = THREE.LinearFilter;
+//    videoTexture.magFilter = THREE.LinearFilter;
+//    videoTexture.format = THREE.RGBFormat;
+//
+//
+//    var scene = new THREE.Scene();
+//
+//    var cubeGeometry = new THREE.SphereGeometry(500, 60, 40);
+//    var sphereMat = new THREE.MeshBasicMaterial({map: videoTexture});
+//    sphereMat.side = THREE.BackSide;
+//    var cube = new THREE.Mesh(cubeGeometry, sphereMat);
+//    scene.add(cube);
+//
+//
+//
+//    var camera = new THREE.PerspectiveCamera(45, width / height, 0.1, 10000);
+//    camera.position.y = 0;
+//    camera.position.z = 500;
+//
+//    scene.add(camera);
+//
+//    var controls = new THREE.OrbitControls( camera);
+//
+//    controls.enableDamping = true;
+//    controls.dampingFactor = 0.25;
+//    controls.enableZoom = false;
+//    controls.maxDistance = 500;
+//    controls.minDistance = 500;
+//
+//    function render() {
+//        if( video.readyState === video.HAVE_ENOUGH_DATA ){
+//            videoTexture.needsUpdate = true;
+//        }
+//        controls.update();
+//        renderer.render(scene, camera);
+//        requestAnimationFrame(render);
+//    }
+//
+//    render();
+var options = {
+    plugins: {
+        panorama: {
+            clickAndDrag: true,
+            clickToToggle: true,
+            autoMobileOrientation: true
         }
-        controls.update();
-        renderer.render(scene, camera);
-        requestAnimationFrame(render);
     }
+};
+var player = videojs('player', options, function() {
 
-    render();
-
+});
 </script>
 </body>
 </html>
