--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
             margin-bottom: 30px;
         }
     </style>
-    <link href="http://vjs.zencdn.net/5.8/video-js.css" rel="stylesheet">
-    <script src="http://vjs.zencdn.net/5.8/video.js"></script>
+    <link href="/video-js.css" rel="stylesheet">
+    <script src="/video.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
     <!--<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/211120/orbitControls.js"></script>-->
     <script src="https://rawgit.com/yanwsh/videojs-panorama/master/dist/videojs-panorama.v5.js"></script>
